--- a/app/src/main/res/layout/add_new_notice_layout.xml
+++ b/app/src/main/res/layout/add_new_notice_layout.xml
@@ -30,6 +30,72 @@
             android:textColor="@color/green"
             android:textSize="20dp" />
 
-    </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/secondNoticeLinerLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_below="@id/topLinerLayout"
+            android:padding="20dp">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/splash_button"
+            android:drawableLeft="@drawable/food_svg1"
+            android:drawablePadding="20dp"
+            android:fontFamily="@font/poppins_medium"
+            android:hint="Give Your Notice a Title!"
+            android:inputType="text"
+            android:padding="20dp"
+            android:textColorHint="@color/green"
+            android:textSize="18dp" />
+
+        <EditText
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/splash_button"
+            android:drawableLeft="@drawable/food_svg1"
+            android:drawablePadding="20dp"
+            android:fontFamily="@font/poppins_medium"
+            android:hint="Enter Notice Description!"
+            android:padding="20dp"
+            android:textColorHint="@color/green"
+            android:inputType="textMultiLine"
+            android:minLines="4"
+            android:textSize="18dp" />
+
+<!--            <com.google.android.material.textfield.TextInputLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:background="@drawable/splash_button"-->
+<!--                android:drawableLeft="@drawable/food_svg1"-->
+<!--                android:drawablePadding="20dp"-->
+<!--                android:layout_marginTop="30dp"-->
+<!--                android:padding="20dp">-->
+
+<!--                <com.google.android.material.textfield.TextInputEditText-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:fontFamily="@font/poppins_medium"-->
+<!--                    android:hint="Enter Your Notice Description!"-->
+<!--                    android:inputType="textMultiLine"-->
+<!--                    android:minLines="4"-->
+<!--                    android:textColorHint="@color/green"-->
+<!--                    android:textSize="18dp" />-->
+<!--            </com.google.android.material.textfield.TextInputLayout>-->
+        </LinearLayout>
+
+    <Button
+        android:layout_below="@id/secondNoticeLinerLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/green"
+        android:layout_centerHorizontal="true"
+        android:text="Confirm"
+        android:textColor="@color/white" />
 
 </RelativeLayout>
