--- a/app/src/main/res/layout/fragment_add_new_food.xml
+++ b/app/src/main/res/layout/fragment_add_new_food.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".AddNewFoodFragment">
+    tools:context=".provider.ProviderAddNewFoodFragment">
 
     <LinearLayout
         android:id="@+id/topLinerLayout"
