--- a/app/src/main/res/layout/fragment_add_new_food.xml
+++ b/app/src/main/res/layout/fragment_add_new_food.xml
@@ -3,57 +3,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".provider.ProviderAddNewFoodFragment">
 
     <LinearLayout
         android:id="@+id/topLinerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
         android:layout_marginTop="20dp"
+        android:gravity="center_horizontal"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="You're one step closer in"
-            android:gravity="center"
             android:fontFamily="@font/poppins_semibold"
-            android:textSize="20dp"
-            android:textColor="@color/black"/>
+            android:gravity="center"
+            android:text="You're one step closer in"
+            android:textColor="@color/black"
+            android:textSize="20dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Helping the Needy"
-            android:gravity="center"
             android:layout_marginLeft="5dp"
             android:fontFamily="@font/poppins_semibold"
-            android:textSize="20dp"
-            android:textColor="@color/green"/>
+            android:gravity="center"
+            android:text="Helping the Needy"
+            android:textColor="@color/green"
+            android:textSize="20dp" />
 
     </LinearLayout>
 
-    <!--    <TextView-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_below="@id/topLinerLayout"-->
-    <!--        android:layout_centerHorizontal="true"-->
-    <!--        android:layout_marginTop="10dp"-->
-    <!--        android:text="Please tell up about your help"-->
-    <!--        android:gravity="center"-->
-    <!--        android:fontFamily="@font/poppins_semibold"-->
-    <!--        android:textSize="25sp"-->
-    <!--        android:textColor="@color/black"/>-->
 
     <LinearLayout
         android:id="@+id/secondLinerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_below="@id/topLinerLayout"
         android:layout_marginTop="50dp"
-        android:layout_below="@id/topLinerLayout">
+        android:orientation="vertical">
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -73,80 +61,12 @@
                 android:drawablePadding="10dp"
                 android:fontFamily="@font/poppins_medium"
                 android:hint="Food / Dish Name"
-                android:paddingTop="30dp"
                 android:paddingLeft="20dp"
+                android:paddingTop="30dp"
                 android:paddingRight="20dp"
-                android:paddingBottom="20dp"/>
+                android:paddingBottom="20dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
-
-
-
-        <!--        <com.google.android.material.textfield.TextInputLayout-->
-        <!--            android:id="@+id/menu_drop"-->
-        <!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:hint="Select Your Food Category"-->
-        <!--            android:layout_marginLeft="20dp"-->
-        <!--            android:layout_marginRight="20dp"-->
-        <!--            android:layout_marginBottom="25dp"-->
-        <!--            android:background="@drawable/splash_button"-->
-        <!--            android:outlineSpotShadowColor="@color/green"-->
-        <!--            app:hintTextColor="@color/green"-->
-        <!--            android:textColorHint="@color/green"-->
-        <!--            app:boxStrokeColor="@color/green">-->
-
-        <!--            <AutoCompleteTextView-->
-        <!--                android:id="@+id/drop_items"-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="match_parent"-->
-        <!--                android:layout_weight="1"-->
-        <!--                android:inputType="none"-->
-        <!--                android:text="Choose your module"-->
-        <!--                />-->
-
-        <!--        </com.google.android.material.textfield.TextInputLayout>-->
-
-
-
-        <!--        <com.google.android.material.textfield.TextInputLayout-->
-        <!--            android:id="@+id/menu_drop"-->
-        <!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:hint="@string/select"-->
-        <!--            android:layout_marginLeft="20dp"-->
-        <!--            android:layout_marginRight="20dp"-->
-        <!--            android:layout_marginBottom="25dp"-->
-        <!--            android:background="@drawable/splash_button"-->
-        <!--            android:outlineSpotShadowColor="@color/green"-->
-        <!--            app:hintTextColor="@color/green"-->
-        <!--            android:textColorHint="@color/green"-->
-        <!--            app:boxStrokeColor="@color/green">-->
-
-        <!--            <AutoCompleteTextView-->
-        <!--                android:id="@+id/drop_items"-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="match_parent"-->
-        <!--                android:layout_weight="1"-->
-        <!--                android:inputType="none"-->
-        <!--                android:text="Choose your module"-->
-        <!--                />-->
-
-        <!--        </com.google.android.material.textfield.TextInputLayout>-->
-
-
-        <!--        <com.google.android.material.button.MaterialButton-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:text="Login"-->
-        <!--            android:textColor="@color/white"-->
-        <!--            android:padding="15dp"-->
-        <!--            android:layout_margin="40dp"-->
-        <!--            android:textSize="17dp"-->
-        <!--            android:fontFamily="@font/poppins_semibold"-->
-        <!--            android:backgroundTint="@color/green"/>-->
 
     </LinearLayout>
 
@@ -154,17 +74,17 @@
         android:id="@+id/dateTimeLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_below="@id/secondLinerLayout"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_below="@id/secondLinerLayout">
+        android:orientation="horizontal">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/etDatePicker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="25dp"
             android:layout_marginRight="2dp"
+            android:layout_marginBottom="25dp"
             android:layout_weight="1">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -176,8 +96,8 @@
                 android:drawablePadding="10dp"
                 android:fontFamily="@font/poppins_medium"
                 android:hint="Select Date"
-                android:paddingTop="30dp"
                 android:paddingLeft="20dp"
+                android:paddingTop="30dp"
                 android:paddingRight="20dp"
                 android:paddingBottom="20dp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -186,8 +106,8 @@
             android:id="@+id/etTimePicker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="25dp"
             android:layout_marginLeft="2dp"
+            android:layout_marginBottom="25dp"
             android:layout_weight="1">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -199,8 +119,8 @@
                 android:drawablePadding="10dp"
                 android:fontFamily="@font/poppins_medium"
                 android:hint="Select Time"
-                android:paddingTop="30dp"
                 android:paddingLeft="20dp"
+                android:paddingTop="30dp"
                 android:paddingRight="20dp"
                 android:paddingBottom="20dp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -211,17 +131,17 @@
         android:id="@+id/locationLinerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_below="@id/dateTimeLinearLayout"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_below="@id/dateTimeLinearLayout">
+        android:orientation="horizontal">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/etLocationOfFood"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="25dp"
             android:layout_marginRight="2dp"
+            android:layout_marginBottom="25dp"
             android:layout_weight="1">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -233,8 +153,8 @@
                 android:drawablePadding="10dp"
                 android:fontFamily="@font/poppins_medium"
                 android:hint="Select Location for Pickup"
-                android:paddingTop="30dp"
                 android:paddingLeft="20dp"
+                android:paddingTop="30dp"
                 android:paddingRight="20dp"
                 android:paddingBottom="20dp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -245,58 +165,10 @@
         android:id="@+id/categoryLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_below="@id/locationLinerLayout"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_below="@id/locationLinerLayout">
-
-
-<!--        <com.google.android.material.textfield.TextInputLayout-->
-<!--            android:id="@+id/etSpinner"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginBottom="25dp">-->
-
-<!--            <Spinner-->
-<!--                android:id="@+id/spinnerForType1"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:background="@drawable/splash_button"-->
-<!--                android:drawablePadding="10dp"-->
-<!--                android:fontFamily="@font/poppins_medium"-->
-<!--                android:paddingLeft="20dp"-->
-<!--                android:paddingRight="20dp"-->
-<!--                android:paddingTop="20dp"-->
-<!--                android:paddingBottom="20dp"/>-->
-
-<!--        </com.google.android.material.textfield.TextInputLayout>-->
-
-<!--        <com.google.android.material.textfield.TextInputLayout-->
-<!--            android:id="@+id/new_menu_drop"-->
-<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:hint="Select Food Category"-->
-<!--            android:layout_marginLeft="20dp"-->
-<!--            android:layout_marginRight="20dp"-->
-<!--            android:layout_marginBottom="25dp"-->
-<!--            android:background="@drawable/splash_button"-->
-<!--            android:outlineSpotShadowColor="@color/green"-->
-<!--            app:hintTextColor="@color/green"-->
-<!--            android:textColorHint="@color/green"-->
-<!--            app:boxStrokeColor="@color/green">-->
-
-<!--            <AutoCompleteTextView-->
-<!--                android:id="@+id/drop_items"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_weight="1"-->
-<!--                android:inputType="none"-->
-<!--                android:text="Choose your module"-->
-<!--                />-->
-
-<!--        </com.google.android.material.textfield.TextInputLayout>-->
-
+        android:orientation="horizontal">
 
     </LinearLayout>
 
