--- a/app/src/main/res/layout/provider_fragment_profile.xml
+++ b/app/src/main/res/layout/provider_fragment_profile.xml
@@ -96,6 +96,28 @@
                     android:fontFamily="@font/poppins_semibold"/>
 
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:paddingBottom="15dp"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Account Verified Status"
+                    android:textSize="18dp"
+                    android:fontFamily="@font/poppins_semibold"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Not Verified"
+                    android:textSize="19dp"
+                    android:textColor="@color/green"
+                    android:fontFamily="@font/poppins_semibold"/>
+
+            </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
