--- a/app/src/main/res/layout/add_new_food_layout.xml
+++ b/app/src/main/res/layout/add_new_food_layout.xml
@@ -63,6 +63,7 @@
                 android:textSize="18dp" />
 
             <EditText
+                android:id="@+id/etExpiryDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
@@ -77,6 +78,7 @@
                 android:textSize="18dp" />
 
             <EditText
+                android:id="@+id/etExpiryTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
